--- a/workers/Dockerfile
+++ b/workers/Dockerfile
@@ -1,11 +1,12 @@
 # Use Python base image
-FROM python:3.11-slim
+FROM python:3.11
 
 # Set working directory
 WORKDIR /app
 
 # Install build dependencies
 RUN apt-get update && \
+    apt-get install -y docker.io && \
     apt-get install -y --no-install-recommends gcc python3-dev && \
     rm -rf /var/lib/apt/lists/*
 
