--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,20 +1,31 @@
-# Upstream block for your backend
-upstream app {
-    server backend:5000;  # This points to your app container
+server {
+    listen 80;
+    server_name onlinejudge.api.credenz.co.in;
+
+    location /.well-known/acme-challenge/ {
+        root /var/lib/letsencrypt;
+    }
+
+    # Redirect HTTP to HTTPS
+    location / {
+        return 301 https://$host$request_uri;
+    }
 }
 
 server {
-    listen 80;
-    server_name 0.0.0.0;
-    client_max_body_size 14M;
+    listen 443 ssl;
+    server_name onlinejudge.api.credenz.co.in;
 
-    # Redirect HTTP to HTTPS
-    # return 301 https://$host$request_uri;
+    ssl_certificate /etc/letsencrypt/live/onlinejudge.api.credenz.co.in/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/onlinejudge.api.credenz.co.in/privkey.pem;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
 
     location / {
-        proxy_pass http://app;  # Forward requests to the 'app' container
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_pass http://backend;
         proxy_set_header Host $host;
-        proxy_redirect off;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
