--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,31 +1,62 @@
-server {
-    listen 80;
-    server_name onlinejudge.api.credenz.co.in;
+worker_processes auto;
 
-    location /.well-known/acme-challenge/ {
-        root /var/lib/letsencrypt;
-    }
-
-    # Redirect HTTP to HTTPS
-    location / {
-        return 301 https://$host$request_uri;
-    }
+events {
+    worker_connections 1024;
 }
 
-server {
-    listen 443 ssl;
-    server_name onlinejudge.api.credenz.co.in;
+http {
+    limit_req_zone $binary_remote_addr zone=limit_zone:10m rate=10r/s;
 
-    ssl_certificate /etc/letsencrypt/live/onlinejudge.api.credenz.co.in/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/onlinejudge.api.credenz.co.in/privkey.pem;
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
+    server {
+        listen 80 default_server;
+        listen 443 ssl default_server;
+        server_name _;  
 
-    location / {
-        proxy_pass http://backend;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        ssl_certificate /etc/letsencrypt/live/onlinejudge.api.credenz.co.in/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/onlinejudge.api.credenz.co.in/privkey.pem;
+
+        return 404;
+
+    }
+
+    # 🚀 Redirect HTTP to HTTPS for the domain
+    server {
+        listen 80;
+        server_name onlinejudge.api.credenz.co.in;
+
+        return 301 https://$host$request_uri;
+    }
+
+    # ✅ Main HTTPS server block
+    server {
+        listen 443 ssl;
+        server_name onlinejudge.api.credenz.co.in;
+
+        ssl_certificate /etc/letsencrypt/live/onlinejudge.api.credenz.co.in/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/onlinejudge.api.credenz.co.in/privkey.pem;
+
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+        add_header Content-Security-Policy upgrade-insecure-requests;
+
+        location / {
+            limit_req zone=limit_zone burst=20;
+            proxy_pass http://backend:5000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Cookie $http_cookie;
+        }
+
+        location ~ /\. {
+            deny all;
+        }
+
+        error_page 404 /404.html;
+        location = /404.html {
+            root /var/www/html;
+            internal;
+        }
+
+        client_max_body_size 10M;
     }
 }
