Integration to front-end and backend done

--- a/workers/Dockerfile
+++ b/workers/Dockerfile
@@ -25,4 +25,4 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Command will be overridden by docker-compose
-CMD ["celery", "-A", "tasks", "worker", "--loglevel=info"]
+CMD ["celery", "-A", "tasks", "worker", "--loglevel=DEBUG"]
