--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,9 +25,9 @@ services:
   # ───────────────────── BACKEND ─────────────────────
   backend:
     build: .
-    container_name: online-judge-backend
+    container_name: backend
     restart: always
-    ports: ["5000:5000"]
+    # ports: ["5000:5000"]
     environment:
       NODE_ENV: ${NODE_ENV}
       JWT_SECRET: ${JWT_SECRET}
@@ -41,8 +41,7 @@ services:
     depends_on:
       db:              { condition: service_healthy }
       redis:           { condition: service_healthy }
-      celery_worker:   { condition: service_started   }
-      celery_beat:     { condition: service_started   }
+      worker:          { condition: service_started   }
     volumes:
       - .:/app:z
       - /app/node_modules
@@ -53,7 +52,7 @@ services:
   # ───────────────────── DATABASE ────────────────────
   db:
     image: postgres:14-alpine
-    container_name: online-judge-db
+    container_name: db
     restart: always
     environment:
       POSTGRES_USER: ${DB_USER}
@@ -70,7 +69,7 @@ services:
   # ───────────────────── REDIS ───────────────────────
   redis:
     image: redis:alpine
-    container_name: online-judge-redis
+    container_name: redis
     restart: always
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
@@ -80,9 +79,8 @@ services:
     networks: [judge_net]
 
   # ─────────────────── CELERY WORKER ─────────────────
-  celery_worker:
+  worker:
     build: { context: ./workers, dockerfile: Dockerfile }
-    container_name: online-judge-celery-worker
     healthcheck:
       test : ["CMD", "celery -A workers.tasks status || exit 1"]
       interval: 30s
@@ -99,7 +97,7 @@ services:
     command: >
       celery -A workers.tasks worker
             --loglevel=${LOG_LEVEL:-info}
-            --concurrency=${WORKER_CONCURRENCY:-4}
+            --concurrency=3
             --queues=submitQueue,runQueue,runSystemQueue
 
     environment:
@@ -178,8 +176,8 @@ services:
     build: { context: ./workers, dockerfile: Dockerfile }
     container_name: celery-api
     restart: always
-    ports:
-      - "8000:8000"
+    # ports:
+    #   - "8000:8000"
     command: python api_server.py
     depends_on:
       - redis
