--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,18 +19,18 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and Push Backend Image
         run: |
-          docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/oj-backend:latest .
-          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/oj-backend:latest 
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/oj-backend:latest .
+          docker push ${{ secrets.DOCKER_USERNAME }}/oj-backend:latest 
         
       - name: Build and Push Worker Image
         run: |
-          docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/oj-worker:latest ./workers
-          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/oj-worker:latest 
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/oj-worker:latest ./workers
+          docker push ${{ secrets.DOCKER_USERNAME }}/oj-worker:latest 
         
       - name: Deploy To GCP via SSH
         uses : appleboy/ssh-action@v1.0.0
@@ -40,13 +40,7 @@ jobs:
           key: ${{ secrets.GCP_SSH_KEY }}
           script: |
             cd ~/online-judge-backend
-            docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/oj-backend:latest
-            docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/oj-worker:latest
+            docker pull ${{ secrets.DOCKER_USERNAME }}/oj-backend:latest
+            docker pull ${{ secrets.DOCKER_USERNAME }}/oj-worker:latest
             docker compose down
             docker compose up -d
-            
-
-
-
-        
-      
