Complete Implementation of Websocket

--- a/nginx/conf.d/online-judge.conf
+++ b/nginx/conf.d/online-judge.conf
@@ -1,4 +1,4 @@
-# HTTP (80)
+# HTTP - Redirect all traffic to HTTPS
 server {
     listen 80;
     server_name onlinejudge.duckdns.org;
@@ -12,7 +12,7 @@ server {
     }
 }
 
-# HTTPS (443)
+# HTTPS - With WebSocket support
 server {
     listen 443 ssl;
     server_name onlinejudge.duckdns.org;
@@ -20,8 +20,25 @@ server {
     ssl_certificate /etc/letsencrypt/live/onlinejudge.duckdns.org/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/onlinejudge.duckdns.org/privkey.pem;
 
+    # WebSocket support for Socket.IO
+    location /socket.io/ {
+        proxy_pass http://backend:5000;
+
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    # Normal HTTP Proxying (e.g., REST API, Webhooks)
     location / {
         proxy_pass http://backend:5000;
+        proxy_http_version 1.1;
+
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
