--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,10 @@ services:
 
   # ───────────────────── BACKEND ─────────────────────
   backend:
-    image: ${DOCKERHUB}/oj-backend:latest
+    build: 
+      context: .
+      dockerfile: Dockerfile
+    # image: ${DOCKERHUB}/oj-backend:latest
     container_name: backend
     restart: always
     environment:
