--- a/nginx/conf.d/online-judge.conf
+++ b/nginx/conf.d/online-judge.conf
@@ -22,17 +22,18 @@ server {
 
     # WebSocket support for Socket.IO
     location /socket.io/ {
-        proxy_pass http://backend:5000;
+    proxy_pass http://backend:5000;
 
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "Upgrade";
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";  # <-- lowercase and quoted
 
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_cache_bypass $http_upgrade;
-    }
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_cache_bypass $http_upgrade;
+}
+
 
     # Normal HTTP Proxying (e.g., REST API, Webhooks)
     location / {
